--- a/28-history.qmd
+++ b/28-history.qmd
@@ -86,4 +86,7 @@ In 2021, IMBCR expanded to include BCR 10 BLM lands in the Burns, Prineville, an
 In 2022, we combined several strata within two National Forests in Colorado that had previously been created to serve as control strata for an overlay project. In Arapaho Roosevelt National Forest we combined the Arapaho Roosevelt National Forests All Other stratum (CO-BCR16-VO) and the Arapaho Roosevelt National Forests Control (CO-BCR16-RC) stratum into a single stratum for the forest (CO-BCR16-AR). In Pike-San Isabel National Forest we combined the Pike San Isabel National Forests All Other (CO-BCR16-PO) stratum and the Pike and San Isabel National Forests Control (CO-BCR16-PC) stratum into a single stratum for the forest (CO-BCR16-PS). In South Dakota, the Black Hills National Forest - Hydrologic Code 7 Watersheds (SD-BCR17-HU) stratum and the Black Hills National Forest - All other Watersheds (SD-BCR17-BF) stratum were combined into a single Black Hills National Forest stratum (SD-BCR17-BI). This change was made to help maintain survey coverage of the forest.
 
 ## **2023** {.unnumbered} 
-In 2023, we split BLM lands within Colorado into separate strata for each BLM field office. To do this we retired CO-BCR16-BL (Bureau of Land Management lands in BCR16) and CO-BCR10-BL (Bureau of Land Management lands in BCR10). We then created new strata for each BLM field office and  BCR combination. These new strata are CO-BCR10-KR (BCR10 Kremmling Field Office), CO-BCR16-KR (BCR16 Kremmling Field Office), CO-BCR10-LS (BCR10 Little Snake Field Office), CO-BCR16-LS (BCR16 Little Snake Field Office), CO-BCR10-WR (BCR10 White River Field Office), CO-BCR16-CR (Colorado River Valley Field Office), CO-BCR16-GJ (Grand Junction Field Office), CO-BCR16-GU (Gunnison Field Office), CO-BCR16-RG (Royal Gorge Field Office), CO-BCR16-SL (San Luis Valley Field Office), CO-BCR16-TR (Tres Rios Field Office), CO-BCR16-UN (Uncompahgre Field Office), CO-BCR16-WR (White River Field Office).
+In 2023, we split BLM lands within Colorado into separate strata for each BLM field office. To do this we retired CO-BCR16-BL (Bureau of Land Management lands in BCR16) and CO-BCR10-BL (Bureau of Land Management lands in BCR10). We then created new strata for each BLM field office and  BCR combination. These new strata are CO-BCR10-KR (BCR10 Kremmling Field Office), CO-BCR16-KR (BCR16 Kremmling Field Office), CO-BCR10-LS (BCR10 Little Snake Field Office), CO-BCR16-LS (BCR16 Little Snake Field Office), CO-BCR10-WR (BCR10 White River Field Office), CO-BCR16-CR (Colorado River Valley Field Office), CO-BCR16-GJ (Grand Junction Field Office), CO-BCR16-GU (Gunnison Field Office), CO-BCR16-RG (Royal Gorge Field Office), CO-BCR16-SL (San Luis Valley Field Office), CO-BCR16-TR (Tres Rios Field Office), CO-BCR16-UN (Uncompahgre Field Office), CO-BCR16-WR (White River Field Office).  
+
+## **2024** {.unnumbered} 
+In 2024, we expanded sampling to cover all National Forests within USFS Region 3. We created new strata in forests that had not previously been stratified. These new strata are AZ-APSIT-AH (Apache-Sitgreaves National Forest - High Elevation), AZ-APSIT-AL (Apache-Sitgreaves National Forest - Low Elevation), AZ-PRESC-PH (Prescott National Forest - High Elevation), AZ-PRESC-PL (Prescott National Forest - Low Elevation), NM-BCR16-CF (Carson National Forest), NM-BCR16-SF (Santa Fe National Forest), NM-CIBOL-CB (Cibola National Forest), NM-GILA-GH (Gila National Forest - High Elevation), NM-GILA-GL (Gila National Forest - Low Elevation), NM-LINCN-LH (Lincoln National Forest - High Elevation), NM-LINCN-LL (Lincoln National Forest - Low Elevation).
