--- a/26-references.qmd
+++ b/26-references.qmd
@@ -23,7 +23,7 @@ Bureau of Land Management. (2014). 2014 Montana/Dakotas BLM Special Status Speci
 
 Bureau of Land Management. (2015). Idaho Bureau of Land Management Special Status Species List Update. Idaho State Office Instruction Memorandum 2015-009c1, attachment 1. Chesser, R. T., Burns, K. J., Cicero, C., Dunn, J. L., Kratter, A. W., Lovette, I. J., … Winker, K. (2017). Fifty-eighth supplement to the American Ornithological Society’s Check-list of North American Birds. The Auk, 134(3), 751–773.
 
-Chesser, R. T., S. M. Billerman, K. J. Burns, C. Cicero, J. L. Dunn, B. E. Hernández-Baños, R. A. Jiménez, A. W. Kratter, N. A. Mason, P. C. Rasmussen, J. V. Remsen, Jr., D. F. Stotz, and K. Winker. 2022. Check-list of North American Birds (online). American Ornithological Society. <https://checklist.americanornithology.org/taxa/>
+Chesser, R. T., S. M. Billerman, K. J. Burns, C. Cicero, J. L. Dunn, B. E. Hernández-Baños, R. A. Jiménez, O. JOhnson, A. W. Kratter, N. A. Mason, P. C. Rasmussen, and J. V. Remsen. 2024. Sixty-fifth Supplement to the American Ornithological Society’s Check-list of North American Birds (online). American Ornithological Society. <https://www.birdpop.org/pages/birdSpeciesCodes.php>
 
 Cody, M. L. (1985). Habitat selection in birds. New York, NY, USA. Academic Press.
 
