--- a/7-results.qmd
+++ b/7-results.qmd
@@ -8,7 +8,7 @@ title: "Summary"
 engine: r
 ---
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = FALSE, warning=FALSE}
 library(tidyverse)
 library(quarto)
 
